# CollectMiddleware

./: .gitignore  PYPROJECT.TOML  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
Collectmiddleware/: __init__.py
collectmiddleware/: middleware.py
src/CollectMiddleware/: middleware.py
