[project]
name = "collectmiddleware"
version = "0.1.0"
description = "this project consists of creating a middleware to transmit the data collected on an Object Request to a MongoDB Database for later analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo>=4.13.2",
    "starlette>=0.47.1",
    "typing-extensions>=4.14.1",
]
