[metadata]
name = CollectMiddleware
version = 0.0.1
author = Darix SAMANI
author_email = samandarix@gmail.com
description = this project consists of creating a middleware to transmit the data collected on an Object Request to a RedisTimeSerie for later analysis 
long_description = file: README.md
long_description_content_type = text/markdown
url = github/darixsamani/CollectMiddleware
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
packages = CollectMiddleware
python_requires = >=3.7
include_package_data = True




